--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,17 @@
-.Home-logo{
+.main-navbar {
+    background-color: red;
+    display: flex;
+    flex-direction: row;
     
+}
+
+.Home-logo {
+    height: 4em;
+    width: 8em;
+}
+
+.navbar_content{
+    list-style-type: none;
+    display: flex;
+    flex-flow: row wrap;
 }
