Agrandissement icones + soulignage au passage de la souris uniquement

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,5 +20,13 @@
 }
 
 .text_connexion {
-    color:white;
+    color: white;
+}
+
+.text_connexion:hover {
+    text-decoration: underline white;
+}
+
+a:link {
+    text-decoration: none;
 }
