Création des éléments de la liste de la bar de gauche + mise en colonne

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,3 +22,18 @@
 .text_connexion {
     color:white;
 }
+
+.side_navbar {
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    position:fixed;
+}
+
+.side_navbar_content {
+    list-style-type: none;
+    color: white;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+}
