--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+/* Gestion du css de la navbar header */
 .main-navbar {
     background-color: red;
     display: flex;
@@ -6,11 +7,13 @@
 
 }
 
+/*Le logo nintendo*/
 .Home-logo {
     height: 4em;
     width: 8em;
 }
 
+/*Positionement navbar header*/
 .navbar_content {
     list-style-type: none;
     color: white;
@@ -39,6 +42,7 @@ a:link {
     text-decoration: none;
 }
 
+/* Gestion CSS de la navbar side */
 .side_navbar {
     background-color: red;
     display: flex;
