Z-indexage de la navbar pour quelle soit toujours au-dessus des éléments

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 .main-navbar {
     position:fixed;
     width:100%;
+    z-index: 10;
     background-color: red;
     display: flex;
     flex-direction: row;
