--- a/assets/style.css
+++ b/assets/style.css
@@ -178,14 +178,38 @@ a:link {
     transform: translateY(-10px);
 }
 
+.grille_dimg figure{
+    transition: transform 0.5s; 
+}
+.grille_dimg figure:hover {
+    transform: translateY(-10px);
+}
+
 .portrait {
+    grid-column: span 2;
     grid-row: span 2;
 }
 
-.grille_dimg .paysage {
+.portrait img{
+    height:100%
+}
+
+.paysage {
     grid-column: span 4;
+}
+
+.paysage img{
+    height: 100%;
 }
 
 .grille_dimg .fun{
     grid-column: span 3;
+}
+
+figcaption{
+    position:relative;
+    color:white;
+    text-align: center;
+    font-style: "Open Sans", sans-serif;
+    background-color: rgb(0,0,0,0.5);
 }
