--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    font: "Open Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 .main-navbar {
@@ -213,6 +213,5 @@ figcaption{
     position:relative;
     color:white;
     text-align: center;
-    font-style: "Open Sans", sans-serif;
     background-color: rgb(0,0,0,0.5);
 }
