--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
-/* Gestion du css de la navbar header */
 * {
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
 }
 
+/************ Gestion du css de la navbar header ***************/
 .main-navbar {
     position: fixed;
     width: 100%;
@@ -58,7 +58,7 @@ a:link {
     flex-direction: row;
 }
 
-/* Gestion CSS de la navbar side */
+/******* Gestion CSS de la navbar side *******/
 .side_navbar {
     margin-top: 70px;
     background-color: brown;
@@ -117,7 +117,7 @@ a:link {
     transform: rotate(180deg);
 }
 
-/*Gestion CSS de la news bar*/
+/*********Gestion CSS de la news bar********/
 .newsbar {
     margin-top: 70px;
     position: absolute;
@@ -162,6 +162,7 @@ a:link {
     margin-bottom: 5px;
 }
 
+/******* Gère l'affichage de la grille d'image ******/
 .grille_dimg {
     margin-top: 85px;
     margin-left: 85px;
@@ -217,6 +218,7 @@ figcaption{
     background-color: rgb(0,0,0,0.5);
 }
 
+/***** Gère l'affichage du footer ******/
 footer{
     margin-left: 85px;
     width:66%;
@@ -224,4 +226,25 @@ footer{
 
 .upper_foot{
     background-color: red;
+    color:white;
+    display: flex;
+    flex-direction: row;
+    text-decoration: underline;
+    justify-content: flex-start;
+}
+
+.indication_pays{
+    background-color: brown;
+    margin-left: 2em;
+    height:20px;
+}
+
+#choix{
+    background-color: brown;
+    color:white;
+    text-decoration: underline;
+}
+
+.lower_foot{
+    background-color: brown;
 }
